--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 	  </head>
 
 	<body>
+	<div ng-app="myApp" ng-controller="myCtrl">
 		<div id="head">Login / Register</div>
 
 		<div id="nav">
@@ -37,27 +38,27 @@
 				<h1>General</h1>
 				<p>
 					<strong>Hi Hello</strong><br />
-					<a href="" class="sidebar">WOOHOO</a><br />
+					<a href="" class="sidebar" ng-repeat="">WOOHOO</a><br />
 					<a href="" class="sidebar">WOOHOO</a>
 				</p>
 
 				<p>
 					<strong>Other Stuff?????</strong><br />
-					<a href="" class="sidebar">idk</a><br />
+					<a href="" class="sidebar" ng-repeat="">idk</a><br />
 					<a href="" class="sidebar">omg</a><br />
 					<a href="" class="sidebar">lol</a>
 
 				<h1>Games</h1>
 				<p>
 					<strong>I like to play games</strong><br />
-					<a href="" class="sidebar">ayeeee</a><br />
+					<a href="" class="sidebar" ng-repeat="">ayeeee</a><br />
 					<a href="" class="sidebar">ayeeee</a>
 				</p>
 
 				<h1>Other</h1>
 				<p>
 					<strong>I like other stuff</strong><br />
-					<a href="" class="sidebar">poopy</a><br />
+					<a href="" class="sidebar" ng-repeat="">poopy</a><br />
 					<a href="" class="sidebar">doodoo</a>
 				</p>
 			</div>
@@ -107,5 +108,6 @@
 				Yo yo yo yo embryo &copy; 2015
 			</p>
 		</div>
+	</p>
 	</body>
 </html>
