--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	    <meta charset="utf-8">
 	    <meta http-equiv="X-UA-Compatible" content="IE=edge">
 	    <meta name="viewport" content="width=device-width, initial-scale=1">
-	    <title>Gamers</title>
+	    <title>Gamer</title>
 	    
 	    <!-- Libraries -->
 	    <script src="https://code.jquery.com/jquery.min.js"></script>
@@ -29,7 +29,7 @@
 			<a href="/" class="nav">Home</a> 
 			<a href="/forum.html" class="nav">Forum</a> 
 			<a href="/calendar.html" class="nav">Calendar</a> 
-			<a href="" class="nav">GAMERS</a>
+			<a href="" class="nav">GAMER</a>
 		</div>
 
 		<div id="main">
