--- a/index.html
+++ b/index.html
@@ -22,25 +22,23 @@
 	<body>
 		<div id="stuff">
 			<div id="head">Login / Register</div>
-			<div id="nav">
+<!-- 			<div id="nav">
 				<a ui-sref="home" class="nav">Home</a> 
 				<a ui-sref="forum" class="nav">Forum</a> 
 				<a ui-sref="calendar" class="nav">Calendar</a> 
 				<a href="" class="nav">GAMERS</a>
-			</div>
+			</div> -->
 
-<<<<<<< HEAD
 		<div id="nav">
 			<a href="/" class="nav">Home</a> 
 			<a href="/forum.html" class="nav">Forum</a> 
 			<a href="/calendar.html" class="nav">Calendar</a> 
 			<a href="" class="nav">GAMER</a>
 		</div>
-=======
+
 			<div id="main">
 				<div id="titleleft">Forum Sidebar</div>
 				<div id="titleright">Events/Features</div>
->>>>>>> 7b8f08d5279ca2e61ee7dc0e014ee9724adb785b
 
 				<div id="left">
 					<div id="leftbar">
