Enabled multipage structure

--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
 	<body>
 		<div id="stuff">
 			<div id="head">Login / Register</div>
-			<div id="nav">
+			<div id="nav" class="header">
 				<a ui-sref="home" class="nav">Home</a> 
-				<a ui-sref="forum" class="nav">Forum</a> 
+				<a ui-sref="newPost" class="nav">New Post</a> 
 				<a ui-sref="calendar" class="nav">Calendar</a> 
 				<a href="" class="nav">GAMERS</a>
 			</div>
@@ -65,12 +65,8 @@
 				</div>
 
 				<div id="center">
-					<div ui-view>
-						<h1>Featured stuff????</h1>
-						<p>
-							Me har har
-						</p>
-					</div>
+					<h1>Featured stuff????</h1>
+					<div ui-view></div>
 				</div>
 
 				<div id="right">
