--- a/index.html
+++ b/index.html
@@ -67,29 +67,29 @@
 						</p>
 					</div>
 				</div>
-				<div ui-view>
 				<div id="center">
-<<<<<<< HEAD
-					<h1>Featured stuff????</h1>
-					<div ui-view></div>
-=======
+					<div ui-view>
+<!-- HEAD -->
+						<h1>Featured stuff????</h1>
 					
-					<div class="container" id="centerTitle">
-						<h4>News</h4>
-					</div>
-					<div class ="container">
-						<div class ="row">
-							<div class ="col-md-4" id="topic">
-								<h5>Threads Created</h5>		
-					</div>
-					<div class ="container" id="threadList">
-						<ul>
-							<li ng-repeat='thread in threads'>{{thread.title + ' , created at ' + thread.createdAt}}</li>
-						</ul>
+						<div class="container" id="centerTitle">
+							<h4>News</h4>
+						</div>
+						<div class ="container">
+							<div class ="row">
+								<div class ="col-md-4" id="topic">
+									<h5>Threads Created</h5>		
+								</div>
+								<div class ="container" id="threadList">
+									<ul>
+										<li ng-repeat='thread in threads'>{{thread.title + ' , created at ' + thread.createdAt}}</li>
+									</ul>
 
+								</div>
+							</div>
+						</div>
 					</div>
-				</div>
->>>>>>> cc3f3b18f9b52b7c7be4e0515dd78aa190e4da3c
+<!-- cc3f3b18f9b52b7c7be4e0515dd78aa190e4da3c -->
 				</div>
 
 				<div id="right">
