--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 				<a ui-sref="home" class="nav">Home</a> 
 				<a ui-sref="newPost" class="nav">New Post</a> 
 				<a ui-sref="calendar" class="nav">Calendar</a> 
-				<a href="" class="nav">GAMERS</a>
+				<a href="http://gamer.ischool.uw.edu/" target="_blank" class="nav">GAMERS</a>
 			</div>
 
 			<div id="main">
