moved script and made js load on window load

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html ng-app="myApp">
+<html>
 	<head>
 	    <meta charset="utf-8">
 	    <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -17,13 +17,12 @@
 	    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.15/angular-ui-router.js"></script>
 	    <!-- Custom code -->
 	    <link href = "css/main.css" rel="stylesheet" type = "text/css"/>
-	    
+	    <script src="js/main.js"></script>
 	  </head>
 
-	<body>
+	<body ng-app="myApp">
 
 	<!-- facebook authentication with firebasee -->
-
 
 		<div id="stuff">
 			<div id="head"><span id="login">Login</span> / Register</div>
@@ -137,5 +136,5 @@
 		</div>
 	</body>
 
-	<script src="js/main.js"></script>
+
 </html>
