removed register option at top left

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
 
 		<div id="stuff">
-			<div id="head"><span id="login">Login</span> / Register</div>
+			<div id="head"><span id="login">Login</span></div>
 			<div id="nav" class="header">
 				<a ui-sref="home" class="nav">Home</a> 
 				<a ui-sref="newPost" class="nav">New Post</a> 
