--- a/index.html
+++ b/index.html
@@ -67,30 +67,10 @@
 							<a href="" class="sidebar">doodoo</a>
 						</p> -->
 					</div>
+
 				</div>
 				<div id="center">
-					<div ui-view>
-<!-- HEAD -->
-						<h1>Featured stuff????</h1>
-					
-						<div class="container" id="centerTitle">
-							<h4>News</h4>
-						</div>
-						<div class ="container">
-							<div class ="row">
-								<div class ="col-md-4" id="topic">
-									<h5>Threads Created</h5>		
-								</div>
-								<div class ="container" id="threadList">
-									<ul>
-										<li ng-repeat='thread in threads'>{{thread.title + ' , created at ' + thread.createdAt}}</li>
-									</ul>
-
-								</div>
-							</div>
-						</div>
-					</div>
-<!-- cc3f3b18f9b52b7c7be4e0515dd78aa190e4da3c -->
+					<div ui-view>	
 				</div>
 
 				<div id="right">
@@ -127,7 +107,9 @@
 					</div>
 				</div>
 			</div>
-
+			<div class="container">
+			<p>WebIrc</p>
+			</div>
 			<div id="footer">
 				<p>
 					There is a footer here<br />
