--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
 		<div id="stuff">
 			<div id="head"><span id="login">Login</span></div>
 			<div id="nav" class="header">
-				<a ui-sref="home" class="nav">Home</a> 
+				<a ui-sref="home" class="nav" onclick="getElementById('homepageStuff').style.display = 'initial'">Home</a> 
 				<a ui-sref="newPost" class="nav">New Post</a> 
-				<a ui-sref="calendar" class="nav">Calendar</a> 
+				<a ui-sref="threads" class="nav">Thread</a> 
 				<a href="http://gamer.ischool.uw.edu/" target="_blank" class="nav">GAMERS</a>
 			</div>
 
@@ -69,27 +69,7 @@
 					</div>
 				</div>
 				<div id="center">
-					<div ui-view>
-<!-- HEAD -->
-						<h1>Featured stuff????</h1>
-					
-						<div class="container" id="centerTitle">
-							<h4>News</h4>
-						</div>
-						<div class ="container">
-							<div class ="row">
-								<div class ="col-md-4" id="topic">
-									<h5>Threads Created</h5>		
-								</div>
-								<div class ="container" id="threadList">
-									<ul>
-										<li ng-repeat='thread in threads'>{{thread.title + ' , created at ' + thread.createdAt}}</li>
-									</ul>
-
-								</div>
-							</div>
-						</div>
-					</div>
+					<div ui-view></div>
 <!-- cc3f3b18f9b52b7c7be4e0515dd78aa190e4da3c -->
 				</div>
 
