--- a/index.html
+++ b/index.html
@@ -25,11 +25,12 @@
 	<!-- facebook authentication with firebasee -->
 
 		<div id="stuff">
-			<div id="head"><span id="login">Login</span><span id="welcome">Welcome {{ username }}</span></div>
+			<div id="head"><span id="login" ng-show="showLogin">Login</span><span id="logout" ng-show='!showLogin'>Logout {{ username }}</span></div>
 			<div id="nav" class="header">
 				<a ui-sref="home" class="nav" onclick="getElementById('homepageStuff').style.display = 'initial'">Home</a> 
 				<a ui-sref="newPost" class="nav">New Post</a> 
 				<a ui-sref="threads" class="nav">Thread</a> 
+				<a ui-sref="irc" class="nav">IRC</a> 
 				<a href="http://gamer.ischool.uw.edu/" target="_blank" class="nav">GAMERS</a>
 			</div>
 
@@ -107,14 +108,13 @@
 					</div>
 				</div>
 			</div>
-
 			<div id="footer">
 				<p>
 					There is a footer here<br />
 					Yo yo yo yo embryo &copy; 2015
 				</p>
 			</div>
-		</div>
+		
 	</body>
 
 
