--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	    
 	    <!-- Libraries -->
 	    <script src="https://code.jquery.com/jquery-1.9.1.min.js"></script>
-	    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet" type="text/css" />""
+	    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
 	    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
 	    <script src="https://cdn.firebase.com/js/client/2.2.4/firebase.js"></script>
 	    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.2/angular.js"></script>
