--- a/index.html
+++ b/index.html
@@ -12,18 +12,17 @@
 	    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
 	    <script src="https://cdn.firebase.com/js/client/2.2.4/firebase.js"></script>
 	    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.2/angular.js"></script>
-
 	    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.15/angular-ui-router.js"></script>
 	    <link href = "css/main.css" rel="stylesheet" type = "text/css"/>
 	    <script src="js/main.js"></script>
-	  </head>
+	</head>
 
 	<body ng-app="myApp" ng-controller="myController">
 
 	<!-- facebook authentication with firebasee -->
 
 		<div id="stuff">
-			<div id="head"><span id="login" ng-show="showLogin">Login</span><span id="logout" ng-show='!showLogin'>Logout {{ username }}</span></div>
+			<div id="head"><button type="submit" class='.btn-primary .btn-lg' id="login" ng-show="showLogin">Login</button><button class='.btn-primary .btn-lg' type="submit" id="logout" ng-show='!showLogin'>Logout {{ username }}</button></div>
 			<div id="nav" class="header">
 				<a ui-sref="home" class="nav" onclick="getElementById('homepageStuff').style.display = 'initial'">Home</a> 
 				<a ui-sref="threads" class="nav">Thread</a> 
