--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
 	<!-- facebook authentication with firebasee -->
 
 		<div id="stuff">
-			<div id="head"><button type="submit" class='.btn-primary .btn-lg' id="login" ng-show="showLogin">Login</button><button class='.btn-primary .btn-lg' type="submit" id="logout" ng-show='!showLogin'>Logout {{ username }}</button></div>
+			<div id="head"><button type="submit" class='.btn-primary .btn-lg' id="login" ng-show="showLogin">Login</button><button class='.btn-primary .btn-lg' type="submit" id="logout" ng-show='!showLogin'>Logout {{ userName }}</button></div>
 			<div id="nav" class="header">
-				<a ui-sref="home" class="nav" onclick="getElementById('homepageStuff').style.display = 'initial'">Home</a> 
+				<a ui-sref="home" class="nav">Home</a> 
 				<a ui-sref="threads" class="nav">Thread</a> 
 				<a ui-sref="irc" class="nav">IRC</a> 
 				<a href="http://gamer.ischool.uw.edu/" target="_blank" class="nav">GAMERS</a>
