--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
 			<div id="main">
 				<div id="titleleft">Forum Sidebar</div>
-				<div id="titleright">Events/Features</div>
+				<div id="titleright">What is GAMERS?</div>
 
 
 				<div id="left">
@@ -89,35 +89,8 @@
 
 				<div id="right">
 					<div id="rightbar">
-						<p>
-							Next Event
-						</p>
-
-						<p>
-							idk if you guys wanted this to have its own header too
-						</p>
-
-						<h1>Events</h1>
-						<ul>
-							<li><strong>What's cookin good lookin</strong>
-								<ul>
-									<li ng-repeat="event in events">happenin' today</li>
-									<li>and always</li>
-								</ul>
-							</li>
-							<li><strong>October 11</strong>
-								<ul>
-									<li>sherrys bday</li>
-									<li>really cool day</li>
-									<li>dessert time ;)</li>
-								</ul>
-							</li>
-						</ul>
-
-						<h1>Chat?</h1>
-						<p>
-							Chat stuff
-						</p>
+						<h1>About GAMERS</h1>
+						<p id="gamersDesc">The GAMER Group explores new ideas and approaches for organizing and providing access to video games and interactive media, particularly from a user-centered perspective. We research various topics related to data modeling, metadata creation, and construction of controlled vocabularies for games and other related media such as music, artwork, videos, and more. The group is also responsible for developing and maintaining the UW/SIMM Video Game Metadata Schema in order to advance the cataloging practice of these popular cultural artifacts in cultural heritage organizations and support the use of games in education and science.</br></br>The GAMER Group is led by Professor Jin Ha Lee at the Information School, University of Washington.</p>
 					</div>
 				</div>
 			</div>
