Changed code file name and linked left nav bar title

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 							</ul>
 						</p>
 
-						<h1>Featured Topic</h1>
+						<a ui-sref="home"></a><h1>Featured Topic</h1>
 						<p>
 							<ul>
 								<li>
