Created featured topic template. Linked it. Updated footer. Minor

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 							</ul>
 						</p>
 
-						<a ui-sref="home"></a><h1>Featured Topic</h1>
+						<a ui-sref="home"><h1>Featured Topic</h1></a>
 						<p>
 							<ul>
 								<li>
@@ -96,8 +96,7 @@
 			</div>
 			<div id="footer">
 				<p>
-					There is a footer here<br />
-					Yo yo yo yo embryo &copy; 2015
+					Copyright &copy; 2015 <a href="http://gamer.ischool.uw.edu/" target="_blank">GAMERS Group</a>.
 				</p>
 			</div>
 		
