--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 			<div id="nav" class="header">
 				<a ui-sref="home" class="nav">Home</a> 
 				<a ui-sref="irc" class="nav">IRC</a> 
-				<a href="http://gamer.ischool.uw.edu/" target="_blank" class="nav">GAMERS</a>
+				<a href="http://gamer.ischool.uw.edu/" target="_blank" class="nav">GAMER</a>
 			</div>
 
 			<div id="main">
@@ -95,14 +95,14 @@
 
 				<div id="right">
 					<div id="rightbar">
-						<h1>About GAMERS</h1>
+						<h1>About GAMER</h1>
 						<p id="gamersDesc">The GAMER Group explores new ideas and approaches for organizing and providing access to video games and interactive media, particularly from a user-centered perspective. We research various topics related to data modeling, metadata creation, and construction of controlled vocabularies for games and other related media such as music, artwork, videos, and more. The group is also responsible for developing and maintaining the UW/SIMM Video Game Metadata Schema in order to advance the cataloging practice of these popular cultural artifacts in cultural heritage organizations and support the use of games in education and science.</br></br>The GAMER Group is led by Professor Jin Ha Lee at the Information School, University of Washington.</p>
 					</div>
 				</div>
 			</div>
 			<div id="footer">
 				<p>
-					Copyright &copy; 2015 <a href="http://gamer.ischool.uw.edu/" target="_blank">GAMERS Group</a>.
+					Copyright &copy; 2015 <a href="http://gamer.ischool.uw.edu/" target="_blank">GAMER Group</a>.
 				</p>
 			</div>
 		
