--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 	<!-- facebook authentication with firebasee -->
 
 		<div id="stuff">
-			<div id="head"><button type="submit" class='.btn-primary .btn-lg' id="login" ng-show="showLogin">Login</button><button class='.btn-primary .btn-lg' type="submit" id="logout" ng-show='!showLogin'>Logout {{ userName }}</button></div>
+			<div id="head"><button type="submit" class='btn btn-primary btn-md log' id="login" ng-show="showLogin">Login</button><button class='btn btn-primary btn-md log' type="submit" id="logout" ng-show='!showLogin'>Logout:  {{ userName }}</button></div>
 			<div id="nav" class="header">
 				<a ui-sref="home" class="nav">Home</a> 
 				<a ui-sref="irc" class="nav">IRC</a> 
@@ -45,7 +45,7 @@
 
 				<div id="left">
 					<div id="leftbar"> 
-						<a ui-sref="general"><h1 id="generals">General</h1></a>						
+						<a ui-sref="general"><h1>General</h1></a>						
 						<p>
 							<ul><strong>Featured</strong>
 								<div ng-repeat="general in generals | limitTo:6 | orderBy:'-recent'" ng-if="!featured">
