--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 		<div id="stuff">
 			<div id="head"><button type="submit" class='btn btn-primary btn-md log' id="login" ng-show="showLogin">Login</button><button class='btn btn-primary btn-md log' type="submit" id="logout" ng-show='!showLogin'>Logout:  {{ userName }}</button></div>
 			<div id="nav" class="header">
-				<a ui-sref="home" class="nav">Home</a> 
+				<a ui-sref="home" class="nav homes">Home</a> 
 				<a ui-sref="irc" class="nav">IRC</a> 
 				<a href="http://gamer.ischool.uw.edu/" target="_blank" class="nav">GAMER</a>
 			</div>
