--- a/index.html
+++ b/index.html
@@ -48,12 +48,12 @@
 						<a ui-sref="general"><h1>General</h1></a>						
 						<p>
 							<ul><strong>Featured</strong>
-								<div ng-repeat="general in generals | limitTo:7 | orderBy:'-recent'" ng-if="general.featured">
+								<div ng-repeat="general in generals | orderBy:'-recent'" ng-if="general.featured">
 									<a ng-href="http://students.washington.edu/ishiiy/GAMERS/#/thread/{{general.$id}}">{{general.title}}</a>
 								</div>
 							</ul>
 							<ul><strong>Community</strong>
-								<div ng-repeat="general in generals | limitTo:7 | orderBy:'-recent'" ng-if="!general.featured">
+								<div ng-repeat="general in generals | orderBy:'-recent' | limitTo:numLimitNFeature" ng-if="!general.featured">
 									<a ng-href="http://students.washington.edu/ishiiy/GAMERS/#/thread/{{general.$id}}">{{general.title}}</a>
 								</div>
 							</ul>
@@ -62,12 +62,12 @@
 						<a ui-sref="blogs"><h1>Blog</h1></a>
 						<p>
 							<ul><strong>Featured</strong>
-								<li ng-repeat="blog in blogs | limitTo:7 | orderBy:'-recent'" ng-if="blog.featured">
+								<li ng-repeat="blog in blogs | orderBy:'-recent'" ng-if="blog.featured">
 									<a ng-href="http://students.washington.edu/ishiiy/GAMERS/#/thread/{{blog.$id}}">{{blog.title}}</a>
 								</li>
 							</ul>
 							<ul><strong>Community</strong>
-								<li ng-repeat="blog in blogs | limitTo:7 | orderBy:'-recent'" ng-if="!blog.featured">
+								<li ng-repeat="blog in blogs | orderBy:'-recent' | limitTo:numLimitNFeature" ng-if="!blog.featured">
 									<a ng-href="http://students.washington.edu/ishiiy/GAMERS/#/thread/{{blog.$id}}">{{blog.title}}</a>
 								</li>
 							</ul>
@@ -76,7 +76,7 @@
 						<a ui-sref="featuredTopic"><h1>Featured Topic</h1></a>
 						<p>
 							<ul>
-								<li ng-repeat="feature in featured | limitTo:12 | orderBy:'-recent' ">
+								<li ng-repeat="feature in featured | orderBy:'-recent' | limitTo:12">
 									<a ng-href="http://students.washington.edu/ishiiy/GAMERS/#/thread/{{feature.$id}}">{{feature.title}}</a>
 								</li>
 							</ul>
